--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "expo": "~51.0.26",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-location": "^17.0.1",
+    "expo-sensors": "^13.0.9",
+    "expo-sms": "^12.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "@expo/vector-icons": "^14.0.2"
+    "react-native-contacts": "^7.0.8",
+    "react-native-qrcode-svg": "^6.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
