--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "axios": "^1.7.7",
     "expo": "~51.0.26",
     "expo-barcode-scanner": "^13.0.1",
+    "expo-contacts": "~13.0.5",
     "expo-location": "^17.0.1",
+    "expo-permissions": "^14.4.0",
     "expo-sensors": "^13.0.9",
     "expo-sms": "^12.0.1",
     "expo-status-bar": "~1.12.1",
